test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/error_type_attr.sw
library;

// `error_type` attribute does not expect any arguments.